# procedural_tree_generator

./: bell_albero.mtl  configuration.json  readme.md  run.sh  test.mtl  trees_try.json
apps/: CMakeLists.txt
apps/test_app/: CMakeLists.txt  test_app.cpp
apps/tree_generator/: CMakeLists.txt  tree_generator.cpp
libs/yocto_extension/: yocto_extension.cpp  yocto_extension.h
tests/tree/: tree.json
